<resources>
    <string name="app_name">SLRTC Bus Ticket</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btntext">Print Test</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="btnSearch">Connect  Bluetooth  Printer</string>
    <string name="btnSend">Print</string>
    <string name="btn_test">Print</string>
    <string name="btnClose">Close</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">set</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="strLang">en</string>
    <string name="button_scan">Scan for devices</string>
    <string name="str_tvfro">Board Point</string>
    <string name="str_tvto">Destination</string>
    <string name="str_tvbus">Bus Number</string>
    <string name="str_tvtrip">Trip Type</string>

    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>

    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
    <string name="CurrentLanguageis"> "Current Printer Language Is :" </string>

    <string name="IsOutOfPaper"> "The printer is out of paper" </string>
    <string name="HavePaper"> "The printer has a paper" </string>
    <string name="itpw3">              getting the priner information......</string>
    <string name="itpw4">              "have updated Font lib "</string>
    <string name="PrinterNotNormal1"> "The printer is too hot" </string>
    <string name="getV"> "get version" </string>

    <string name="hello">Hello World,  FileExplorer!</string>
    <string-array name="language">
        <item>"U.S.          "</item>
        <item>"the French    "</item>
        <item>"German        "</item>
        <item>"British       "</item>
        <item>"I Denmark     "</item>
        <item>"the Swedish   "</item>
        <item>"Italian       "</item>
        <item>"Spain  I      "</item>
        <item>"Japan         "</item>
        <item>"Norway        "</item>
        <item>"the Danish II "</item>
        <item>"the Spanish II"</item>
        <item>"Latin America "</item>
        <item>"south Korean  "</item>
        <item>"slovenija/crow emperor"</item>
        <item>"Chinese"</item>
    </string-array>

    <string name="TransactionType1">&quot;HDX-PT95-CUT-945.bin&quot;</string>
    <string name="TransactionType2">&quot;HDX-PT95-CUT-946.bin&quot;</string>
    <string name="TransactionType3">&quot;HDX-PT95-LP-945.bin&quot;</string>
    <string name="TransactionType4">&quot;HDX-PT95-LP-946.bin&quot;</string>


    <string name="ZiKuFile1">&quot;hdx_ziku_20151230&quot;</string>

    <string name="itpw">              Updating Firmware......</string>
    <string name="itpw2">              Updating Font lib......</string>
    <string name="Determine">"OK"</string>
    <string name="cancel">"Cancel"</string>
    <string name="UpdateFWWarn">"warning: the version chosen is old"</string>

<string name="CharDemo">"Char Demo"</string>
<string name="CodeDemo">"Code Demo"  </string>
<string name="ImageDemo">"Image Demo" </string>
<string name="GetVersion">"Get Version" </string>
<string name="UpdateVersion">"Update Version" </string>
<string name="UpdateFontLib">"Update Font Lib" </string>
<string name="WarningTimeIsLong">"Updating Font Lib will Take about 6 minutes" </string>
<string name="quit">"Quit" </string>

<string name="previousFWV"> "Previous firmware version :" </string>
<string name="currentFWV"> "Current firmware version :" </string>

<string name="updateFWFinish">"update firmware finish"</string>

<string name="selectFW">"Select FirmWare File"</string>


    <string name="srt_tv_get_started">Get Started</string>
    <string name="str_btn_start_signin">Sign in</string>
    <string name="str_already_instruction">Already have  an account?</string>
    <string name="str_tv_or">Or</string>
    <string name="str_btn_register">Register</string>
    <string name="str_tv_advice">If you don\'t  have a Bus Ticket account, go ahead and create one</string>
    <string name="str_edt_first_name">First Name</string>
    <string name="str_edt_last_name">Last Name</string>
    <string name="str_edt_email">example@gmail.com</string>
    <string name="str_tv_registration_intro">Your name is used to personalize your phone with Bus Ticket service</string>
    <string name="str_btn_reg_next_1">Next</string>
    <string name="str_tv_screen_2_intro">Your email will be used as your username. Enter your password and confirm it below</string>
    <string name="str_edt_password">Password</string>
    <string name="str_edt_confirm">Confirm</string>
    <string name="str_tv_screen_3_intro">Bus Ticket App will send a one time SMS message to verify your phone number. Please enter your phone number in the field below</string>
    <string name="str_edt_number">Phone No</string>
    <string name="str_btn_finish">Finish</string>
    <string name="str_verification_code">Code</string>
    <string name="str_btn_previous3">Back</string>
    <string name="str_btn_previous2">Back</string>
    <string name="str_img_btn_add_account_desc">Add New Account</string>
    <string name="str_img_btn_transactions_desc">View transaction history</string>
    <string name="str_img_btn_account_listing_desc">Account listing</string>
    <string name="str_img_btn_notifications_desc">Notifications</string>
    <string name="str_img_btn_make_payment_desc">Make payments</string>
    <string name="str_img_btn_help_desc">Contact us or find help</string>
    <string name="str_tv_message_screen_4">r</string>
    <string name="str_tv_message_screen_3" />
    <string name="str_tv_select_bank">Select your bank</string>
    <string name="str_tv_enter_acc_no" >Account No</string>
    <string name="str_edt_account_no_hint">Enter Your Bank Account Number</string>
    <string name="str_btn_add_account">Save</string>
    <string name="str_btn_print">Test Print</string>
    <string name="str_btn_generate">Generate QR CODE</string>
    <string name="str_tv_amount_desc">Enter Bill Amount</string>
    <string name="str_edt_hint_short_name">Enter Bank Short Name</string>
    <string name="str_edt_bank_name_hint">Enter Bank Name</string>
    <string name="str_edt_bank_code_hint">Enter Bank\'s Swift Code</string>
    <string name="str_btn_add_bank_text">Add Bank</string>
    <string name="str_tv_acc_no">1</string>
    <string name="str_edt_hint_store_name" >Enter store name</string>
    <string name="str_edt_store_name" >Enter store name</string>
    <string name="str_edt_hint_store_contact">Contact Person</string>
    <string name="str_tv_select_pos_bank">Select route and terminal</string>
    <string name="str_transaction_list_tv_type">$0,0000 Bill to</string>
    <string name="str_transaction_list_tvdesc">Bill to mr ehimeson</string>
    <string name="str_tv_reg_screen_route">Select Route</string>
    <string name="str_tv_reg_screen_terminal">Select Station</string>
    <string name="str_btn_loading">Refresh</string>
    <string name="str_ticket_list_refresh">Refresh</string>
    <string name="str_ticket_list_sync">Synchronize</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
    <string-array name="tripTypes">
        <item>1</item>
        <item>2</item>

    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="str_tv_time_from">Trip Start Time</string>
    <string name="str_tv_trip_time_end">Trip End Time</string>
    <string name="str_tv_speedo_start">Speedo Meter Reading Start</string>
    <string name="str_tv_trip_speedo_end">Speedometer Reading Stop</string>
    <string name="str_tv_trip_fuel_start">Fuel Level Before Trip</string>
    <string name="str_tv_fuel_level_after_trip">Fuel Level After Trip</string>pick_time
    <string name="pick_start_time">Set Start Time</string>
    <string name="str_tv_trip_remark">Trip Remark</string>
    <string name="str_tv_no_of_passengers">Number Of Passengers</string>
    <string name="pick_stop_time">Set Stop Time</string>
    <string name="str_btn_connect">Connect</string>
    <string name="str_btn_disconnect">Disconnect</string>
    <string name="str_btn_send">Send</string>
    <string name="str_btn_clear">Clear</string>
    <string name="str_tv_test">Test Print from the POS Printer</string>
    <string name="str_btn_test">Test</string>
</resources>
