<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestMainActivity" >

    <Button
        android:id="@+id/ButtonCharacterDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:textSize="40sp"		
        android:text="@string/CharDemo" />

    <Button
        android:id="@+id/ButtonCodeDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/CodeDemo" />

    <Button
        android:id="@+id/ButtonImageDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/ImageDemo" />

    <Button
        android:id="@+id/GetVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/GetVersion" />
    <Button
        android:id="@+id/UpdateVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/UpdateVersion" />
     <Button
        android:id="@+id/UpdateFontLib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/UpdateFontLib" /> 
     <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"		
        android:text="@string/quit" />
           
<TextView
    android:id="@+id/TextViewSerialRx"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:textSize="20sp"		
    android:layout_weight="0.45"
    android:ems="10"
    android:text="" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextEmission" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_connect"
        android:id="@+id/btnConnect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_disconnect"
        android:id="@+id/btnDisconnect"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnConnect"
        android:layout_toEndOf="@+id/btnConnect" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_clear"
        android:id="@+id/btnClear"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_send"
        android:id="@+id/btnSend"
        android:layout_alignParentTop="true"
        />

</LinearLayout>
