<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_tv_screen_2_intro"
            android:id="@+id/tvScrren2Intro"
            android:layout_weight="0.00" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:id="@+id/tvloginError" />




        <EditText
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edtPassword"
            android:password="false"
            android:hint="@string/str_edt_password" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edtConfirm"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="false"
            android:hint="@string/str_edt_confirm" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNextReg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Next"/>

    </LinearLayout>
</ScrollView>